--- a/templates/index.html
+++ b/templates/index.html
@@ -44,6 +44,10 @@
         textarea {
             width: 100%;
         }
+
+        ::placeholder {
+            opacity: 0.6 !important;
+        }
     </style>
 </head>
 
