--- a/templates/infos.html
+++ b/templates/infos.html
@@ -158,11 +158,10 @@
                         <div class="card">
                             <div class="card-body text-center">
                                 <a href="https://aleksandre80.gitbook.io/untitled" target="_blank" class="icon-link">
-                                    <i class="fas fa-book icon-large"></i>
+                                    <img src="https://app.gitbook.com/public/images/icon-512.png" alt="GitBook" class="img-fluid" style="height: 50px;">
                                     <h5 class="card-title">Documentation</h5>
                                 </a>
-                                <p class="card-text">Consultez notre GitBook pour une documentation complète et des
-                                    guides sur l'utilisation de GenomePilot.</p>
+                                <p class="card-text">Consultez notre GitBook pour une documentation complète et des guides sur l'utilisation de GenomePilot.</p>
                             </div>
                         </div>
                     </div>
@@ -170,26 +169,26 @@
                         <div class="card">
                             <div class="card-body text-center">
                                 <a href="https://github.com/aleksandre80/CHU-WeppApp" target="_blank" class="icon-link">
-                                    <i class="fab fa-github icon-large"></i>
+                                    <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub" class="img-fluid" style="height: 50px;">
                                     <h5 class="card-title">Code Source</h5>
                                 </a>
-                                <p class="card-text">Le code source de GenomePilot est disponible sur GitHub. Contribuez
-                                    au développement ou explorez le code.</p>
+                                <p class="card-text">Le code source de GenomePilot est disponible sur GitHub. Contribuez au développement ou explorez le code.</p>
                             </div>
                         </div>
                     </div>
+                    
                 </div>
 
                 <!-- Accordion -->
                 <div class="accordion" id="accordionExample">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingOne">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                                 Étape 1 : Configuration du pipeline <span class="badge badge-custom ms-2">1</span>
                             </button>
                         </h2>
-                        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
                             data-bs-parent="#accordionExample">
                             <div class="accordion-body">
                                 <p>Dans cette étape, vous sélectionnez et configurez le pipeline à partir de notre
