--- a/templates/bam_merger.html
+++ b/templates/bam_merger.html
@@ -40,6 +40,10 @@
         .container {
             max-width: 90%;
         }
+
+        ::placeholder {
+            opacity: 0.6 !important;
+        }
     </style>
 </head>
 
