--- a/templates/vcf_creator.html
+++ b/templates/vcf_creator.html
@@ -39,6 +39,10 @@
         .container {
             max-width: 90%;
         }
+
+        ::placeholder {
+            opacity: 0.6 !important;
+        }
     </style>
 </head>
 
