--- a/templates/methylartist_violon.html
+++ b/templates/methylartist_violon.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BAM Merger</title>
+    <title>Methylartist Violon</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/prismjs/themes/prism-okaidia.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/prismjs/prism.js"></script>
@@ -44,6 +44,16 @@
         ::placeholder {
             opacity: 0.6 !important;
         }
+
+        .list-group-item {
+            cursor: pointer;
+        }
+
+        .list-group-item.active {
+            background-color: #007bff;
+            border-color: #007bff;
+            color: #fff;
+        }
     </style>
 </head>
 
@@ -78,30 +88,43 @@
                     aria-label="breadcrumb">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="/">Home</a></li>
-                        <li class="breadcrumb-item active"><a href="/bam_merger">BAM Merger Configuration</a></li>
-                        <li class="breadcrumb-item active" aria-current="page"><a href="/history-merge">Historique</a>
+                        <li class="breadcrumb-item active"><a href="/methylartist_violon">Methylartist Violon
+                                Configuration</a>
+                        </li>
+                        <li class="breadcrumb-item active" aria-current="page"><a
+                                href="/history-moyenne-reads">Historique</a>
                         </li>
                     </ol>
                 </nav>
-                <h1 class="mb-4 flex-grow-1 text-center">BAM Merger Configuration</h1>
+                <h1 class="mb-4 flex-grow-1 text-center">Methylartist Violon Configuration</h1>
             </div>
         </div>
         <form id="configForm">
             <div class="mb-3">
-                <label for="input_dir" class="form-label">Selectionnez votre dossier de BAM à merger:</label>
-                <input type="text" class="form-control" id="input_dir" name="input_dir"
-                    placeholder="/data/SV-FLT4/2023-3117/20240701_1345_X1_FAY40986_92117a30/fastq_pass/alignment​"
+                <label for="input_file" class="form-label">Selectionnez votre fichier BAM :</label>
+                <input type="text" class="form-control" id="input_file" name="input_file"
+                    placeholder="/data/Test_Methylation_24072024/2021-1541/20240724_1120_X2_FAY40798_038efd99/pod5/GenomePilot/5mC_5hmC.bam"
                     required>
             </div>
             <div class="mb-3">
-                <label for="output_dir" class="form-label">Selectionnez votre dossier où vous voulez retrouver votre BAM
-                    mergé:</label>
+                <label for="output_dir" class="form-label">Selectionnez votre dossier de sortie pour l'image :</label>
                 <input type="text" class="form-control" id="output_dir" name="output_dir"
-                    placeholder="/data/SV-FLT4/2023-3117/20240701_1345_X1_FAY40986_92117a30/fastq_pass/alignment​/merge"
+                    placeholder="/data/Test_Methylation_24072024/2021-1541/20240724_1120_X2_FAY40798_038efd99/GenomePilot"
+                    required>
+            </div>
+            <div class="mb-3">
+                <label for="ref_genome" class="form-label">Selectionnez votre référence (e.g., .fa):</label>
+                <input type="text" class="form-control" name="ref_genome" placeholder="/data/References/hg38.fa"
+                    required>
+            </div>
+            <div class="mb-3">
+                <label for="ref_bed" class="form-label">Selectionnez votre référence (e.g., .bed):</label>
+                <input type="text" class="form-control" name="ref_bed" placeholder="/data/References/genome_10kb_windows.bed"
                     required>
             </div>
             <button type="submit" class="btn btn-primary">Ajouter la configuration</button>
         </form>
+
         <ul id="configList" class="list-group mt-3"></ul>
 
         <button onclick="generateAndShowScript()" class="btn btn-secondary mb-3">Générer le script</button>
@@ -121,7 +144,7 @@
         document.getElementById('configForm').addEventListener('submit', function (e) {
             e.preventDefault();
             const formData = new FormData(this);
-            fetch('/bam_merger', {
+            fetch('/methylartist_violon', {
                 method: 'POST',
                 body: formData
             }).then(response => response.json())
@@ -137,24 +160,24 @@
         });
 
 
-        // function updateConfigList(configurations) {
-        //     const configList = document.getElementById('configList');
-        //     configList.innerHTML = ''; // Clear existing entries
-        //     configurations.forEach((config, index) => {
-        //         const li = document.createElement('li');
-        //         li.className = 'list-group-item';
-        //         li.textContent = `Config ${index + 1}: ${config.input_dir} - ${config.output_dir}`;
-        //         const deleteBtn = document.createElement('button');
-        //         deleteBtn.textContent = 'Delete';
-        //         deleteBtn.className = 'btn btn-danger btn-sm float-right';
-        //         deleteBtn.onclick = function () { deleteConfiguration(index); };
-        //         li.appendChild(deleteBtn);
-        //         configList.appendChild(li);
-        //     });
-        // }
+        function updateConfigList(configurations) {
+            const configList = document.getElementById('configList');
+            configList.innerHTML = ''; // Clear existing entries
+            configurations.forEach((config, index) => {
+                const li = document.createElement('li');
+                li.className = 'list-group-item';
+                li.textContent = `Config ${index + 1}: ${config.input_file} - ${config.output_dir} - ${config.ref_genome} - ${config.ref_bed}`;
+                const deleteBtn = document.createElement('button');
+                deleteBtn.textContent = 'Delete';
+                deleteBtn.className = 'btn btn-danger btn-sm float-right';
+                deleteBtn.onclick = function () { deleteConfiguration(index); };
+                li.appendChild(deleteBtn);
+                configList.appendChild(li);
+            });
+        }
 
         function deleteConfiguration(index) {
-            fetch('/delete_config_merge', {
+            fetch('/delete_config_methylartist_violon', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({ index })
@@ -170,7 +193,7 @@
         }
 
         function fetchConfigurations() {
-            fetch('/get_configurations_merge')
+            fetch('/get_configurations_methylartist_violon')
                 .then(response => response.json())
                 .then(configurations => {
                     updateConfigList(configurations);
@@ -179,7 +202,7 @@
         }
 
         function startScript() {
-            fetch('/start_merge_script', {
+            fetch('/start_methylartist_violon_script', {
                 method: 'POST'
             })
                 .then(response => response.json())
@@ -192,50 +215,51 @@
     </script>
     <script>
         function generateAndShowScript() {
-            fetch('/generate_bam_script')
+            fetch('/generate_methylartist_violon_script')
                 .then(response => response.json())
                 .then(data => {
                     const codeBlock = document.getElementById('scriptArea');
-                    codeBlock.textContent = data.script; // Utilisez textContent pour préserver les sauts de ligne
+                    codeBlock.textContent = JSON.parse(data.script); // Utilisez JSON.parse pour décoder le contenu échappé
                     Prism.highlightElement(codeBlock);  // Demandez à Prism de mettre en évidence le nouveau contenu
                 })
                 .catch(error => console.error('Error:', error));
         }
     </script>
+
     <script>
         function downloadScript() {
-            window.location.href = '/download_bam_script';
+            window.location.href = '/download_methylartist_violon_script';
         }
     </script>
-        <script>
-            function createDeleteButton(index) {
-                const deleteBtn = document.createElement('button');
-                deleteBtn.textContent = 'Delete';
-                deleteBtn.className = 'btn btn-danger btn-sm float-end';
-                deleteBtn.onclick = function () {
-                    deleteConfiguration(index);
-                };
-                return deleteBtn;
-            }
-    
-            function createConfigListItem(config, index) {
-                const li = document.createElement('li');
-                li.className = 'list-group-item d-flex justify-content-between align-items-center';
-                li.textContent = `Config ${index + 1}: ${config.input_dir} - ${config.output_dir}`;
-                const deleteBtn = createDeleteButton(index);
-                li.appendChild(deleteBtn);
-                return li;
-            }
-    
-            function updateConfigList(configurations) {
-                const configList = document.getElementById('configList');
-                configList.innerHTML = ''; // Clear existing entries
-                configurations.forEach((config, index) => {
-                    const listItem = createConfigListItem(config, index);
-                    configList.appendChild(listItem);
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            var socket = io.connect('http://172.16.102.219:5000/test');
+            console.log('Socket.IO status:', typeof io);
+
+            var runButton = document.getElementById('runScriptButton');
+            if (runButton) {
+                runButton.addEventListener('click', function () {
+                    socket.emit('start_script');
+                    console.log('Script start requested.');  // Ajoutez ceci pour débugger
                 });
+            } else {
+                console.error('Run script button not found!');  // Ajoutez ceci pour débugger
             }
-        </script>
+
+            socket.on('script_output', function (data) {
+                if (data.type === 'stderr') {
+                    console.error(data.message);
+                } else {
+                    console.log(data.message);
+                }
+            });
+
+            socket.on('script_error', function (data) {
+                console.error('Script error:', data.status);  // Affichez le statut de l'erreur
+            });
+        });
+
+    </script>
     <script src="/static/js/analyse_count.js"></script>
 </body>
 
