--- a/templates/methylation.html
+++ b/templates/methylation.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moyenne des reads</title>
+    <title>Methylation Lancement Modele</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/prismjs/themes/prism-okaidia.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/prismjs/prism.js"></script>
@@ -44,6 +44,16 @@
         ::placeholder {
             opacity: 0.6 !important;
         }
+
+        .list-group-item {
+            cursor: pointer;
+        }
+
+        .list-group-item.active {
+            background-color: #007bff;
+            border-color: #007bff;
+            color: #fff;
+        }
     </style>
 </head>
 
@@ -78,40 +88,88 @@
                     aria-label="breadcrumb">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="/">Home</a></li>
-                        <li class="breadcrumb-item active"><a href="/moyenne-reads">Moyenne des reads Configuration</a>
+                        <li class="breadcrumb-item active"><a href="/methylation">Lancement Methylation
+                                Configuration</a>
                         </li>
                         <li class="breadcrumb-item active" aria-current="page"><a
                                 href="/history-moyenne-reads">Historique</a>
                         </li>
                     </ol>
                 </nav>
-                <h1 class="mb-4 flex-grow-1 text-center">Moyenne des Reads Configuration</h1>
+                <h1 class="mb-4 flex-grow-1 text-center">Lancement Methylation Configuration</h1>
             </div>
         </div>
         <form id="configForm">
             <div class="mb-3">
-                <label for="input_file" class="form-label">Selectionnez votre fichier BAM qui est aligné, trié et indéxé
-                    :</label>
-                <input type="text" class="form-control" id="input_file" name="input_file"
-                    placeholder="/data/SV-FLT4/2023-3117/20240701_1345_X1_FAY40986_92117a30/fastq_pass/alignment​/barcode01_aligned_sorted.bam"
+                <label for="input_dir" class="form-label">Selectionnez votre dossier de POD5 :</label>
+                <input type="text" class="form-control" id="input_dir" name="input_dir"
+                    placeholder="/data/Test_Methylation_24072024/2021-1541/20240724_1120_X2_FAY40798_038efd99/pod5/"
                     required>
             </div>
             <div class="mb-3">
-                <label for="output_dir" class="form-label">Selectionnez votre dossier où vous voulez retrouver votre
-                    fichier de sortie :</label>
+                <label for="output_dir" class="form-label">Selectionnez votre dossier de sortie pour le BAM :</label>
                 <input type="text" class="form-control" id="output_dir" name="output_dir"
-                    placeholder="/data/SV-FLT4/2023-3117/20240701_1345_X1_FAY40986_92117a30/fastq_pass/alignment​/GenomePilot"
+                    placeholder="/data/Test_Methylation_24072024/2021-1541/20240724_1120_X2_FAY40798_038efd99/GenomePilot"
                     required>
             </div>
             <div class="mb-3">
-                <label for="bed_file" class="form-label">Selectionnez votre fichier BED avec vos régions cibles
-                    :</label>
-                <input type="text" class="form-control" id="bed_file" name="bed_file"
-                    placeholder="/data/SV-FLT4/2023-3117/20240701_1345_X1_FAY40986_92117a30/fastq_pass/alignment​/regions.bed"
+                <label for="ref_genome" class="form-label">Selectionnez votre référence (e.g., .mmi):</label>
+                <input type="text" class="form-control" name="ref_genome" placeholder="/data/References/hg38.mmi"
                     required>
+            </div>
+            <div class="mb-3">
+                <label for="methylationModel" class="form-label">Selectionnez votre modèle de méthylation :</label>
+                <select id="methylationModel" name="methylationModel" class="form-select" aria-label="Default select example">
+                    <option selected disabled>Open this select menu</option>
+                    <option value="dna_r10.4.1_e8.2_260bps_fast@v3.5.2">dna_r10.4.1_e8.2_260bps_fast@v3.5.2_5mCG@v2</option>
+                    <option value="dna_r10.4.1_e8.2_260bps_fast@v4.0.0">dna_r10.4.1_e8.2_260bps_fast@v4.0.0_5mCG_5hmCG@v2</option>
+                    <option value="dna_r10.4.1_e8.2_260bps_fast@v4.1.0">dna_r10.4.1_e8.2_260bps_fast@v4.1.0_5mCG_5hmCG@v2</option>
+                    <option value="dna_r10.4.1_e8.2_260bps_hac@v3.5.2">dna_r10.4.1_e8.2_260bps_hac@v3.5.2_5mCG@v2</option>
+                    <option value="dna_r10.4.1_e8.2_260bps_hac@v4.0.0">dna_r10.4.1_e8.2_260bps_hac@v4.0.0_5mCG_5hmCG@v2</option>
+                    <option value="dna_r10.4.1_e8.2_260bps_hac@v4.1.0">dna_r10.4.1_e8.2_260bps_hac@v4.1.0_5mCG_5hmCG@v2</option>
+                    <option value="dna_r10.4.1_e8.2_260bps_sup@v3.5.2">dna_r10.4.1_e8.2_260bps_sup@v3.5.2_5mCG@v2</option>
+                    <option value="dna_r10.4.1_e8.2_260bps_sup@v4.0.0">dna_r10.4.1_e8.2_260bps_sup@v4.0.0_5mCG_5hmCG@v2</option>
+                    <option value="dna_r10.4.1_e8.2_260bps_sup@v4.1.0">dna_r10.4.1_e8.2_260bps_sup@v4.1.0_5mCG_5hmCG@v2</option>
+                    <option value="dna_r10.4.1_e8.2_400bps_fast@v3.5.2">dna_r10.4.1_e8.2_400bps_fast@v3.5.2_5mCG@v2</option>
+                    <option value="dna_r10.4.1_e8.2_400bps_fast@v4.0.0">dna_r10.4.1_e8.2_400bps_fast@v4.0.0_5mCG_5hmCG@v2</option>
+                    <option value="dna_r10.4.1_e8.2_400bps_fast@v4.1.0">dna_r10.4.1_e8.2_400bps_fast@v4.1.0_5mCG_5hmCG@v2</option>
+                    <option value="dna_r10.4.1_e8.2_400bps_fast@v4.2.0">dna_r10.4.1_e8.2_400bps_fast@v4.2.0_5mCG_5hmCG@v2</option>
+                    <option value="dna_r10.4.1_e8.2_400bps_hac@v3.5.2">dna_r10.4.1_e8.2_400bps_hac@v3.5.2_5mCG@v2</option>
+                    <option value="dna_r10.4.1_e8.2_400bps_hac@v4.0.0">dna_r10.4.1_e8.2_400bps_hac@v4.0.0_5mCG_5hmCG@v2</option>
+                    <option value="dna_r10.4.1_e8.2_400bps_hac@v4.1.0">dna_r10.4.1_e8.2_400bps_hac@v4.1.0_5mCG_5hmCG@v2</option>
+                    <option value="dna_r10.4.1_e8.2_400bps_hac@v4.2.0">dna_r10.4.1_e8.2_400bps_hac@v4.2.0_5mCG_5hmCG@v2</option>
+                    <option value="dna_r10.4.1_e8.2_400bps_hac@v4.3.0">dna_r10.4.1_e8.2_400bps_hac@v4.3.0_5mC_5hmC@v1</option>
+                    <option value="dna_r10.4.1_e8.2_400bps_hac@v4.3.0">dna_r10.4.1_e8.2_400bps_hac@v4.3.0_5mCG_5hmCG@v1</option>
+                    <option value="dna_r10.4.1_e8.2_400bps_hac@v5.0.0">dna_r10.4.1_e8.2_400bps_hac@v5.0.0_4mC_5mC@v1</option>
+                    <option value="dna_r10.4.1_e8.2_400bps_hac@v5.0.0">dna_r10.4.1_e8.2_400bps_hac@v5.0.0_5mC_5hmC@v1</option>
+                    <option value="dna_r10.4.1_e8.2_400bps_hac@v5.0.0">dna_r10.4.1_e8.2_400bps_hac@v5.0.0_5mCG_5hmCG@v1</option>
+                    <option value="dna_r10.4.1_e8.2_400bps_sup@v3.5.2">dna_r10.4.1_e8.2_400bps_sup@v3.5.2_5mCG@v2</option>
+                    <option value="dna_r10.4.1_e8.2_400bps_sup@v4.0.0">dna_r10.4.1_e8.2_400bps_sup@v4.0.0_5mCG_5hmCG@v2</option>
+                    <option value="dna_r10.4.1_e8.2_400bps_sup@v4.1.0">dna_r10.4.1_e8.2_400bps_sup@v4.1.0_5mCG_5hmCG@v2</option>
+                    <option value="dna_r10.4.1_e8.2_400bps_sup@v4.2.0">dna_r10.4.1_e8.2_400bps_sup@v4.2.0_5mC_5hmC@v1</option>
+                    <option value="dna_r10.4.1_e8.2_400bps_sup@v4.2.0">dna_r10.4.1_e8.2_400bps_sup@v4.2.0_5mCG_5hmCG@v2</option>
+                    <option value="dna_r10.4.1_e8.2_400bps_sup@v4.2.0">dna_r10.4.1_e8.2_400bps_sup@v4.2.0_5mCG_5hmCG@v3.1</option>
+                    <option value="dna_r10.4.1_e8.2_400bps_sup@v4.2.0">dna_r10.4.1_e8.2_400bps_sup@v4.2.0_5mC@v2</option>
+                    <option value="dna_r10.4.1_e8.2_400bps_sup@v4.3.0">dna_r10.4.1_e8.2_400bps_sup@v4.3.0_5mC_5hmC@v1</option>
+                    <option value="dna_r10.4.1_e8.2_400bps_sup@v4.3.0">dna_r10.4.1_e8.2_400bps_sup@v4.3.0_5mCG_5hmCG@v1</option>
+                    <option value="dna_r10.4.1_e8.2_400bps_sup@v5.0.0">dna_r10.4.1_e8.2_400bps_sup@v5.0.0_4mC_5mC@v1</option>
+                    <option value="dna_r10.4.1_e8.2_400bps_sup@v5.0.0">dna_r10.4.1_e8.2_400bps_sup@v5.0.0_5mC_5hmC@v1</option>
+                    <option value="dna_r10.4.1_e8.2_400bps_sup@v5.0.0">dna_r10.4.1_e8.2_400bps_sup@v5.0.0_5mCG_5hmCG@v1</option>
+                    <option value="dna_r9.4.1_e8_fast@v3.4">dna_r9.4.1_e8_fast@v3.4_5mCG_5hmCG@v0</option>
+                    <option value="dna_r9.4.1_e8_fast@v3.4">dna_r9.4.1_e8_fast@v3.4_5mCG@v0.1</option>
+                    <option value="dna_r9.4.1_e8_hac@v3.3">dna_r9.4.1_e8_hac@v3.3_5mCG_5hmCG@v0</option>
+                    <option value="dna_r9.4.1_e8_hac@v3.3">dna_r9.4.1_e8_hac@v3.3_5mCG@v0.1</option>
+                    <option value="dna_r9.4.1_e8_sup@v3.3">dna_r9.4.1_e8_sup@v3.3_5mCG_5hmCG@v0</option>
+                    <option value="dna_r9.4.1_e8_sup@v3.3">dna_r9.4.1_e8_sup@v3.3_5mCG@v0.1</option>
+                </select>
+            </div>
+            <div class="mb-3">
+                <h2>Modèle de Base Correspondant</h2>
+                <p id="baseModel"></p>
             </div>
             <button type="submit" class="btn btn-primary">Ajouter la configuration</button>
         </form>
+
         <ul id="configList" class="list-group mt-3"></ul>
 
         <button onclick="generateAndShowScript()" class="btn btn-secondary mb-3">Générer le script</button>
@@ -131,7 +189,7 @@
         document.getElementById('configForm').addEventListener('submit', function (e) {
             e.preventDefault();
             const formData = new FormData(this);
-            fetch('/moyenne_reads', {
+            fetch('/methylation', {
                 method: 'POST',
                 body: formData
             }).then(response => response.json())
@@ -147,24 +205,24 @@
         });
 
 
-        // function updateConfigList(configurations) {
-        //     const configList = document.getElementById('configList');
-        //     configList.innerHTML = ''; // Clear existing entries
-        //     configurations.forEach((config, index) => {
-        //         const li = document.createElement('li');
-        //         li.className = 'list-group-item';
-        //         li.textContent = `Config ${index + 1}: ${config.input_dir} - ${config.output_dir} - ${config.bed_file}`;
-        //         const deleteBtn = document.createElement('button');
-        //         deleteBtn.textContent = 'Delete';
-        //         deleteBtn.className = 'btn btn-danger btn-sm float-right';
-        //         deleteBtn.onclick = function () { deleteConfiguration(index); };
-        //         li.appendChild(deleteBtn);
-        //         configList.appendChild(li);
-        //     });
-        // }
+        function updateConfigList(configurations) {
+            const configList = document.getElementById('configList');
+            configList.innerHTML = ''; // Clear existing entries
+            configurations.forEach((config, index) => {
+                const li = document.createElement('li');
+                li.className = 'list-group-item';
+                li.textContent = `Config ${index + 1}: ${config.input_dir} - ${config.output_dir} - ${config.bed_file}`;
+                const deleteBtn = document.createElement('button');
+                deleteBtn.textContent = 'Delete';
+                deleteBtn.className = 'btn btn-danger btn-sm float-right';
+                deleteBtn.onclick = function () { deleteConfiguration(index); };
+                li.appendChild(deleteBtn);
+                configList.appendChild(li);
+            });
+        }
 
         function deleteConfiguration(index) {
-            fetch('/delete_config_moyenne_reads', {
+            fetch('/delete_config_methylation', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({ index })
@@ -180,7 +238,7 @@
         }
 
         function fetchConfigurations() {
-            fetch('/get_configurations_moyenne_reads')
+            fetch('/get_configurations_methylation')
                 .then(response => response.json())
                 .then(configurations => {
                     updateConfigList(configurations);
@@ -189,7 +247,7 @@
         }
 
         function startScript() {
-            fetch('/start_moyenne_reads_script', {
+            fetch('/start_methylation_script', {
                 method: 'POST'
             })
                 .then(response => response.json())
@@ -202,7 +260,7 @@
     </script>
     <script>
         function generateAndShowScript() {
-            fetch('/generate_moyenne_reads_script')
+            fetch('/generate_methylation_script')
                 .then(response => response.json())
                 .then(data => {
                     const codeBlock = document.getElementById('scriptArea');
@@ -215,7 +273,7 @@
 
     <script>
         function downloadScript() {
-            window.location.href = '/download_moyenne_reads_script';
+            window.location.href = '/download_methylation_script';
         }
     </script>
     <script>
@@ -247,35 +305,17 @@
         });
 
     </script>
-        <script>
-            function createDeleteButton(index) {
-                const deleteBtn = document.createElement('button');
-                deleteBtn.textContent = 'Delete';
-                deleteBtn.className = 'btn btn-danger btn-sm float-end';
-                deleteBtn.onclick = function () {
-                    deleteConfiguration(index);
-                };
-                return deleteBtn;
-            }
-    
-            function createConfigListItem(config, index) {
-                const li = document.createElement('li');
-                li.className = 'list-group-item d-flex justify-content-between align-items-center';
-                li.textContent = `Config ${index + 1}: ${config.input_dir} - ${config.output_dir} - ${config.bed_file}`;
-                const deleteBtn = createDeleteButton(index);
-                li.appendChild(deleteBtn);
-                return li;
-            }
-    
-            function updateConfigList(configurations) {
-                const configList = document.getElementById('configList');
-                configList.innerHTML = ''; // Clear existing entries
-                configurations.forEach((config, index) => {
-                    const listItem = createConfigListItem(config, index);
-                    configList.appendChild(listItem);
-                });
-            }
-        </script>
+    <script>
+        document.addEventListener('DOMContentLoaded', (event) => {
+            const methylationModelSelect = document.getElementById('methylationModel');
+
+            methylationModelSelect.addEventListener('change', () => {
+                const selectedOption = methylationModelSelect.options[methylationModelSelect.selectedIndex];
+                const baseModel = selectedOption.value;
+                document.getElementById('baseModel').textContent = baseModel;
+            });
+        });
+    </script>
     <script src="/static/js/analyse_count.js"></script>
 </body>
 
