--- a/templates/workflow.html
+++ b/templates/workflow.html
@@ -295,7 +295,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="/methylation" class="card-link" style="text-decoration: none; color: inherit;">
+                    <a href="/methylation-hub" class="card-link" style="text-decoration: none; color: inherit;">
                         <div class="card">
                             <div class="card-body">
                                 <h5 class="card-title">Détecter la méthylation</h5>
