--- a/templates/workflow.html
+++ b/templates/workflow.html
@@ -132,6 +132,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/infos">Infos</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/disk">Disques</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/hierarchy">Hiérarchie fichiers/dossiers</a>
+                    </li>
                 </ul>
             </div>
         </div>
