--- a/templates/anomalie-structure.html
+++ b/templates/anomalie-structure.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anomalie de Structure</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/prismjs/themes/prism-okaidia.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/prismjs/prism.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs/components/prism-bash.min.js"></script>
@@ -90,14 +92,17 @@
         </div>
         <form id="configForm">
             <div class="mb-3">
-                <label for="input_dir" class="form-label">Selectionnez votre fichier BAM qui est aligné et trié
-                    :</label>
+                <label for="input_dir" class="form-label" data-bs-toggle="tooltip" data-bs-placement="top"
+                    title="Assurez vous que vous ayez le .bai de votre fichier BAM dans le même dossier">Selectionnez votre fichier BAM
+                    qui est aligné, trié et indéxé :</label>
+
                 <input type="text" class="form-control" id="input_dir" name="input_dir"
                     placeholder="/data/SV-FLT4/2023-3117/20240701_1345_X1_FAY40986_92117a30/fastq_pass/alignment​/barcode01_sorted.bam"
                     required>
             </div>
+
             <div class="mb-3">
-                <label for="output_dir" class="form-label">Selectionnez votre dossier où vous voulez retrouver votre VCF
+                <label for="output_dir" class="form-label">Selectionnez votre dossier de sortie
                     :</label>
                 <input type="text" class="form-control" id="output_dir" name="output_dir"
                     placeholder="/data/SV-FLT4/2023-3117/20240701_1345_X1_FAY40986_92117a30/fastq_pass/alignment​/GenomePilot"
@@ -209,6 +214,13 @@
         function downloadScript() {
             window.location.href = '/download_anomalie_structure_script';
         }
+
+        document.addEventListener('DOMContentLoaded', function () {
+            var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+            var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+                return new bootstrap.Tooltip(tooltipTriggerEl)
+            })
+        });
     </script>
     <script src="/static/js/analyse_count.js"></script>
     <script>
