[~]Methylation, Methylartist hierarchy and status file [+]Coverage

--- a/templates/workflow.html
+++ b/templates/workflow.html
@@ -249,6 +249,24 @@
                             </div>
                         </div>
                     </a>
+                    <a href="/coverage" class="card-link" style="text-decoration: none; color: inherit;">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Calculer la moyenne des reads des cibles 2</h5>
+                                <p class="card-text">Ce workflow permet de calculer la moyenne des reads des cibles
+                                    depuis un fichier BAM trié et indéxé. Il vous faudra un fichier BED pour spécifier
+                                    les régions cibles.</p>
+                                <div class="tools-used">
+                                    <h6>Outils Utilisés :</h6>
+                                    <ul>
+                                        <li>bedtools</li>
+                                        <li>awk</li>
+                                        <li>GenomePilot</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
                     <a href="/cible_reads" class="card-link" style="text-decoration: none; color: inherit;">
                         <div class="card">
                             <div class="card-body">
