[~]change bash Methylation basecalling

--- a/templates/methylation-hub.html
+++ b/templates/methylation-hub.html
@@ -195,6 +195,14 @@
                                 style="width: 200px; height: auto; object-fit: cover; margin-right: 15px;">
                         </div>
                     </a>
+                    <a href="/split_bed" class="card-link" style="text-decoration: none; color: inherit;">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Découper un bed par bases</h5>
+                                <p class="card-text">Ce pipeline permet de découper une région (une ligne dans un bed) par base pour en ressortir plusieurs lignes.</p>
+                            </div>
+                        </div>
+                    </a>
                     <a href="/analyse_modkit" class="card-link" style="text-decoration: none; color: inherit;">
                         <div class="card">
                             <img src="/static/img/analyse_modkit.png" class="card-img-top"
