--- a/templates/methylation.html
+++ b/templates/methylation.html
@@ -119,54 +119,83 @@
             </div>
             <div class="mb-3">
                 <label for="methylationModel" class="form-label">Selectionnez votre modèle de méthylation :</label>
-                <select id="methylationModel" name="methylationModel" class="form-select" aria-label="Default select example">
+                <select id="methylationModel" name="methylationModel" class="form-select"
+                    aria-label="Default select example">
                     <option selected disabled>Open this select menu</option>
-                    <option value="dna_r10.4.1_e8.2_260bps_fast@v3.5.2">dna_r10.4.1_e8.2_260bps_fast@v3.5.2_5mCG@v2</option>
-                    <option value="dna_r10.4.1_e8.2_260bps_fast@v4.0.0">dna_r10.4.1_e8.2_260bps_fast@v4.0.0_5mCG_5hmCG@v2</option>
-                    <option value="dna_r10.4.1_e8.2_260bps_fast@v4.1.0">dna_r10.4.1_e8.2_260bps_fast@v4.1.0_5mCG_5hmCG@v2</option>
-                    <option value="dna_r10.4.1_e8.2_260bps_hac@v3.5.2">dna_r10.4.1_e8.2_260bps_hac@v3.5.2_5mCG@v2</option>
-                    <option value="dna_r10.4.1_e8.2_260bps_hac@v4.0.0">dna_r10.4.1_e8.2_260bps_hac@v4.0.0_5mCG_5hmCG@v2</option>
-                    <option value="dna_r10.4.1_e8.2_260bps_hac@v4.1.0">dna_r10.4.1_e8.2_260bps_hac@v4.1.0_5mCG_5hmCG@v2</option>
-                    <option value="dna_r10.4.1_e8.2_260bps_sup@v3.5.2">dna_r10.4.1_e8.2_260bps_sup@v3.5.2_5mCG@v2</option>
-                    <option value="dna_r10.4.1_e8.2_260bps_sup@v4.0.0">dna_r10.4.1_e8.2_260bps_sup@v4.0.0_5mCG_5hmCG@v2</option>
-                    <option value="dna_r10.4.1_e8.2_260bps_sup@v4.1.0">dna_r10.4.1_e8.2_260bps_sup@v4.1.0_5mCG_5hmCG@v2</option>
-                    <option value="dna_r10.4.1_e8.2_400bps_fast@v3.5.2">dna_r10.4.1_e8.2_400bps_fast@v3.5.2_5mCG@v2</option>
-                    <option value="dna_r10.4.1_e8.2_400bps_fast@v4.0.0">dna_r10.4.1_e8.2_400bps_fast@v4.0.0_5mCG_5hmCG@v2</option>
-                    <option value="dna_r10.4.1_e8.2_400bps_fast@v4.1.0">dna_r10.4.1_e8.2_400bps_fast@v4.1.0_5mCG_5hmCG@v2</option>
-                    <option value="dna_r10.4.1_e8.2_400bps_fast@v4.2.0">dna_r10.4.1_e8.2_400bps_fast@v4.2.0_5mCG_5hmCG@v2</option>
-                    <option value="dna_r10.4.1_e8.2_400bps_hac@v3.5.2">dna_r10.4.1_e8.2_400bps_hac@v3.5.2_5mCG@v2</option>
-                    <option value="dna_r10.4.1_e8.2_400bps_hac@v4.0.0">dna_r10.4.1_e8.2_400bps_hac@v4.0.0_5mCG_5hmCG@v2</option>
-                    <option value="dna_r10.4.1_e8.2_400bps_hac@v4.1.0">dna_r10.4.1_e8.2_400bps_hac@v4.1.0_5mCG_5hmCG@v2</option>
-                    <option value="dna_r10.4.1_e8.2_400bps_hac@v4.2.0">dna_r10.4.1_e8.2_400bps_hac@v4.2.0_5mCG_5hmCG@v2</option>
-                    <option value="dna_r10.4.1_e8.2_400bps_hac@v4.3.0">dna_r10.4.1_e8.2_400bps_hac@v4.3.0_5mC_5hmC@v1</option>
-                    <option value="dna_r10.4.1_e8.2_400bps_hac@v4.3.0">dna_r10.4.1_e8.2_400bps_hac@v4.3.0_5mCG_5hmCG@v1</option>
-                    <option value="dna_r10.4.1_e8.2_400bps_hac@v5.0.0">dna_r10.4.1_e8.2_400bps_hac@v5.0.0_4mC_5mC@v1</option>
-                    <option value="dna_r10.4.1_e8.2_400bps_hac@v5.0.0">dna_r10.4.1_e8.2_400bps_hac@v5.0.0_5mC_5hmC@v1</option>
-                    <option value="dna_r10.4.1_e8.2_400bps_hac@v5.0.0">dna_r10.4.1_e8.2_400bps_hac@v5.0.0_5mCG_5hmCG@v1</option>
-                    <option value="dna_r10.4.1_e8.2_400bps_sup@v3.5.2">dna_r10.4.1_e8.2_400bps_sup@v3.5.2_5mCG@v2</option>
-                    <option value="dna_r10.4.1_e8.2_400bps_sup@v4.0.0">dna_r10.4.1_e8.2_400bps_sup@v4.0.0_5mCG_5hmCG@v2</option>
-                    <option value="dna_r10.4.1_e8.2_400bps_sup@v4.1.0">dna_r10.4.1_e8.2_400bps_sup@v4.1.0_5mCG_5hmCG@v2</option>
-                    <option value="dna_r10.4.1_e8.2_400bps_sup@v4.2.0">dna_r10.4.1_e8.2_400bps_sup@v4.2.0_5mC_5hmC@v1</option>
-                    <option value="dna_r10.4.1_e8.2_400bps_sup@v4.2.0">dna_r10.4.1_e8.2_400bps_sup@v4.2.0_5mCG_5hmCG@v2</option>
-                    <option value="dna_r10.4.1_e8.2_400bps_sup@v4.2.0">dna_r10.4.1_e8.2_400bps_sup@v4.2.0_5mCG_5hmCG@v3.1</option>
-                    <option value="dna_r10.4.1_e8.2_400bps_sup@v4.2.0">dna_r10.4.1_e8.2_400bps_sup@v4.2.0_5mC@v2</option>
-                    <option value="dna_r10.4.1_e8.2_400bps_sup@v4.3.0">dna_r10.4.1_e8.2_400bps_sup@v4.3.0_5mC_5hmC@v1</option>
-                    <option value="dna_r10.4.1_e8.2_400bps_sup@v4.3.0">dna_r10.4.1_e8.2_400bps_sup@v4.3.0_5mCG_5hmCG@v1</option>
-                    <option value="dna_r10.4.1_e8.2_400bps_sup@v5.0.0">dna_r10.4.1_e8.2_400bps_sup@v5.0.0_4mC_5mC@v1</option>
-                    <option value="dna_r10.4.1_e8.2_400bps_sup@v5.0.0">dna_r10.4.1_e8.2_400bps_sup@v5.0.0_5mC_5hmC@v1</option>
-                    <option value="dna_r10.4.1_e8.2_400bps_sup@v5.0.0">dna_r10.4.1_e8.2_400bps_sup@v5.0.0_5mCG_5hmCG@v1</option>
-                    <option value="dna_r9.4.1_e8_fast@v3.4">dna_r9.4.1_e8_fast@v3.4_5mCG_5hmCG@v0</option>
-                    <option value="dna_r9.4.1_e8_fast@v3.4">dna_r9.4.1_e8_fast@v3.4_5mCG@v0.1</option>
-                    <option value="dna_r9.4.1_e8_hac@v3.3">dna_r9.4.1_e8_hac@v3.3_5mCG_5hmCG@v0</option>
-                    <option value="dna_r9.4.1_e8_hac@v3.3">dna_r9.4.1_e8_hac@v3.3_5mCG@v0.1</option>
-                    <option value="dna_r9.4.1_e8_sup@v3.3">dna_r9.4.1_e8_sup@v3.3_5mCG_5hmCG@v0</option>
-                    <option value="dna_r9.4.1_e8_sup@v3.3">dna_r9.4.1_e8_sup@v3.3_5mCG@v0.1</option>
+                    <option value="dna_r10.4.1_e8.2_260bps_fast@v3.5.2_5mCG@v2">dna_r10.4.1_e8.2_260bps_fast@v3.5.2_5mCG@v2
+                    </option>
+                    <option value="dna_r10.4.1_e8.2_260bps_fast@v4.0.0_5mCG_5hmCG@v2">
+                        dna_r10.4.1_e8.2_260bps_fast@v4.0.0_5mCG_5hmCG@v2</option>
+                    <option value="dna_r10.4.1_e8.2_260bps_fast@v4.1.0_5mCG_5hmCG@v2">
+                        dna_r10.4.1_e8.2_260bps_fast@v4.1.0_5mCG_5hmCG@v2</option>
+                    <option value="dna_r10.4.1_e8.2_260bps_hac@v3.5.2_5mCG@v2">dna_r10.4.1_e8.2_260bps_hac@v3.5.2_5mCG@v2
+                    </option>
+                    <option value="dna_r10.4.1_e8.2_260bps_hac@v4.1.0_5mCG_5hmCG@v2">dna_r10.4.1_e8.2_260bps_hac@v4.0.0_5mCG_5hmCG@v2
+                    </option>
+                    <option value="dna_r10.4.1_e8.2_260bps_hac@v4.1.0_5mCG_5hmCG@v2">dna_r10.4.1_e8.2_260bps_hac@v4.1.0_5mCG_5hmCG@v2
+                    </option>
+                    <option value="dna_r10.4.1_e8.2_260bps_sup@v3.5.2_5mCG@v2">dna_r10.4.1_e8.2_260bps_sup@v3.5.2_5mCG@v2
+                    </option>
+                    <option value="dna_r10.4.1_e8.2_260bps_sup@v4.0.0_5mCG_5hmCG@v2">dna_r10.4.1_e8.2_260bps_sup@v4.0.0_5mCG_5hmCG@v2
+                    </option>
+                    <option value="dna_r10.4.1_e8.2_260bps_sup@v4.1.0_5mCG_5hmCG@v2">dna_r10.4.1_e8.2_260bps_sup@v4.1.0_5mCG_5hmCG@v2
+                    </option>
+                    <option value="dna_r10.4.1_e8.2_400bps_fast@v3.5.2_5mCG@v2">dna_r10.4.1_e8.2_400bps_fast@v3.5.2_5mCG@v2
+                    </option>
+                    <option value="dna_r10.4.1_e8.2_400bps_fast@v4.0.0_5mCG_5hmCG@v2">
+                        dna_r10.4.1_e8.2_400bps_fast@v4.0.0_5mCG_5hmCG@v2</option>
+                    <option value="dna_r10.4.1_e8.2_400bps_fast@v4.1.0_5mCG_5hmCG@v2">
+                        dna_r10.4.1_e8.2_400bps_fast@v4.1.0_5mCG_5hmCG@v2</option>
+                    <option value="dna_r10.4.1_e8.2_400bps_fast@v4.2.0_5mCG_5hmCG@v2">
+                        dna_r10.4.1_e8.2_400bps_fast@v4.2.0_5mCG_5hmCG@v2</option>
+                    <option value="dna_r10.4.1_e8.2_400bps_hac@v3.5.2_5mCG@v2">dna_r10.4.1_e8.2_400bps_hac@v3.5.2_5mCG@v2
+                    </option>
+                    <option value="dna_r10.4.1_e8.2_400bps_hac@v4.0.0_5mCG_5hmCG@v2">dna_r10.4.1_e8.2_400bps_hac@v4.0.0_5mCG_5hmCG@v2
+                    </option>
+                    <option value="dna_r10.4.1_e8.2_400bps_hac@v4.1.0_5mCG_5hmCG@v2">dna_r10.4.1_e8.2_400bps_hac@v4.1.0_5mCG_5hmCG@v2
+                    </option>
+                    <option value="dna_r10.4.1_e8.2_400bps_hac@v4.2.0_5mCG_5hmCG@v2">dna_r10.4.1_e8.2_400bps_hac@v4.2.0_5mCG_5hmCG@v2
+                    </option>
+                    <option value="dna_r10.4.1_e8.2_400bps_hac@v4.3.0_5mC_5hmC@v1">dna_r10.4.1_e8.2_400bps_hac@v4.3.0_5mC_5hmC@v1
+                    </option>
+                    <option value="dna_r10.4.1_e8.2_400bps_hac@v4.3.0_5mCG_5hmCG@v1">dna_r10.4.1_e8.2_400bps_hac@v4.3.0_5mCG_5hmCG@v1
+                    </option>
+                    <option value="dna_r10.4.1_e8.2_400bps_hac@v5.0.0_4mC_5mC@v1">dna_r10.4.1_e8.2_400bps_hac@v5.0.0_4mC_5mC@v1
+                    </option>
+                    <option value="dna_r10.4.1_e8.2_400bps_hac@v5.0.0_5mC_5hmC@v1">dna_r10.4.1_e8.2_400bps_hac@v5.0.0_5mC_5hmC@v1
+                    </option>
+                    <option value="dna_r10.4.1_e8.2_400bps_hac@v5.0.0_5mCG_5hmCG@v1">dna_r10.4.1_e8.2_400bps_hac@v5.0.0_5mCG_5hmCG@v1
+                    </option>
+                    <option value="dna_r10.4.1_e8.2_400bps_sup@v3.5.2_5mCG@v2">dna_r10.4.1_e8.2_400bps_sup@v3.5.2_5mCG@v2
+                    </option>
+                    <option value="dna_r10.4.1_e8.2_400bps_sup@v4.0.0_5mCG_5hmCG@v2">dna_r10.4.1_e8.2_400bps_sup@v4.0.0_5mCG_5hmCG@v2
+                    </option>
+                    <option value="dna_r10.4.1_e8.2_400bps_sup@v4.1.0_5mCG_5hmCG@v2">dna_r10.4.1_e8.2_400bps_sup@v4.1.0_5mCG_5hmCG@v2
+                    </option>
+                    <option value="dna_r10.4.1_e8.2_400bps_sup@v4.2.0_5mC_5hmC@v1">dna_r10.4.1_e8.2_400bps_sup@v4.2.0_5mC_5hmC@v1
+                    </option>
+                    <option value="dna_r10.4.1_e8.2_400bps_sup@v4.2.0_5mCG_5hmCG@v2">dna_r10.4.1_e8.2_400bps_sup@v4.2.0_5mCG_5hmCG@v2
+                    </option>
+                    <option value="dna_r10.4.1_e8.2_400bps_sup@v4.2.0_5mCG_5hmCG@v3.1">
+                        dna_r10.4.1_e8.2_400bps_sup@v4.2.0_5mCG_5hmCG@v3.1</option>
+                    <option value="dna_r10.4.1_e8.2_400bps_sup@v4.2.0_5mC@v2">dna_r10.4.1_e8.2_400bps_sup@v4.2.0_5mC@v2
+                    </option>
+                    <option value="dna_r10.4.1_e8.2_400bps_sup@v4.3.0_5mC_5hmC@v1">dna_r10.4.1_e8.2_400bps_sup@v4.3.0_5mC_5hmC@v1
+                    </option>
+                    <option value="dna_r10.4.1_e8.2_400bps_sup@v4.3.0_5mCG_5hmCG@v1">dna_r10.4.1_e8.2_400bps_sup@v4.3.0_5mCG_5hmCG@v1
+                    </option>
+                    <option value="dna_r10.4.1_e8.2_400bps_sup@v5.0.0_4mC_5mC@v1">dna_r10.4.1_e8.2_400bps_sup@v5.0.0_4mC_5mC@v1
+                    </option>
+                    <option value="dna_r10.4.1_e8.2_400bps_sup@v5.0.0_5mC_5hmC@v1">dna_r10.4.1_e8.2_400bps_sup@v5.0.0_5mC_5hmC@v1
+                    </option>
+                    <option value="dna_r10.4.1_e8.2_400bps_sup@v5.0.0_5mCG_5hmCG@v1">dna_r10.4.1_e8.2_400bps_sup@v5.0.0_5mCG_5hmCG@v1
+                    </option>
                 </select>
             </div>
-            <div class="mb-3">
+            <!-- <div class="mb-3">
                 <h2>Modèle de Base Correspondant</h2>
                 <p id="baseModel"></p>
-            </div>
+            </div> -->
             <button type="submit" class="btn btn-primary">Ajouter la configuration</button>
         </form>
 
@@ -305,17 +334,17 @@
         });
 
     </script>
-    <script>
+    <!-- <script>
         document.addEventListener('DOMContentLoaded', (event) => {
             const methylationModelSelect = document.getElementById('methylationModel');
 
             methylationModelSelect.addEventListener('change', () => {
                 const selectedOption = methylationModelSelect.options[methylationModelSelect.selectedIndex];
-                const baseModel = selectedOption.value;
+                const baseModel = selectedOption.value.split('_5mCG')[0];  // Modifier cette ligne pour extraire le modèle de base
                 document.getElementById('baseModel').textContent = baseModel;
             });
         });
-    </script>
+    </script> -->
     <script src="/static/js/analyse_count.js"></script>
 </body>
 
