[~]change bash Methylation basecalling for demultiplexage with fastq

--- a/templates/methylation.html
+++ b/templates/methylation.html
@@ -192,6 +192,10 @@
                     </option>
                 </select>
             </div>
+            <div class="mb-3">
+                <label for="kit" class="form-label">Selectionnez votre kit :</label>
+                <input type="text" class="form-control" id="kit" name="kit" placeholder="SQK-RBK004" required>
+            </div>
             <!-- <div class="mb-3">
                 <h2>Modèle de Base Correspondant</h2>
                 <p id="baseModel"></p>
