[~]change bash Methylation basecalling for demultiplexage with fastq

--- a/templates/methylation.html
+++ b/templates/methylation.html
@@ -118,6 +118,11 @@
                     required>
             </div>
             <div class="mb-3">
+                <label for="qs_scores" class="form-label">Entrez vos Qscores, si vous voullez en mettre plusieurs
+                    séparez les par des espaces:</label>
+                <input type="text" class="form-control" name="qs_scores" placeholder="14 17 19" required>
+            </div>
+            <div class="mb-3">
                 <label for="methylationModel" class="form-label">Selectionnez votre modèle de méthylation :</label>
                 <select id="methylationModel" name="methylationModel" class="form-select"
                     aria-label="Default select example">
@@ -193,8 +198,8 @@
                 </select>
             </div>
             <div class="mb-3">
-                <label for="kit" class="form-label">Selectionnez votre kit :</label>
-                <input type="text" class="form-control" id="kit" name="kit" placeholder="SQK-RBK004" required>
+                <label for="kit_name" class="form-label">Selectionnez votre kit :</label>
+                <input type="text" class="form-control" id="kit_name" name="kit_name" placeholder="SQK-RBK004" required>
             </div>
             <!-- <div class="mb-3">
                 <h2>Modèle de Base Correspondant</h2>
