--- a/templates/workflow.html
+++ b/templates/workflow.html
@@ -205,7 +205,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="/full_workflow" class="card-link" style="text-decoration: none; color: inherit;">
+                    <!-- <a href="/full_workflow" class="card-link" style="text-decoration: none; color: inherit;">
                         <div class="card">
                             <div class="card-body">
                                 <h5 class="card-title">Du Basecalling au VCF</h5>
@@ -216,7 +216,7 @@
                                     nécessitant une analyse complète à partir de données brutes.</p>
                             </div>
                         </div>
-                    </a>
+                    </a> -->
                     <a href="/anomalie_structure" class="card-link" style="text-decoration: none; color: inherit;">
                         <div class="card">
                             <div class="card-body">
