[+]Add SQK-LSK114 Kit

--- a/templates/index.html
+++ b/templates/index.html
@@ -173,6 +173,7 @@
                     <option value="">Selectionnez votre kit</option>
                     <option value="SQK-NBD114-24">SQK-NBD114-24</option>
                     <option value="SQK-RBK114-24">SQK-RBK114-24</option>
+                    <option value="SQK-LSK114">SQK-LSK114</option>
                 </select>
             </div>
 
